# polarity

app/: Cargo.toml
app/src/cli/: foo.rs  html.rs  mod.rs
examples/: example.tex
examples/docs/: foo.html
lang/docs/: Cargo.toml
lang/docs/src/: doc.rs  generate.rs  lib.rs  structure.rs  util.rs
lang/docs/templates/: codata.html  codef.html  data.html  def.html  index.html  let.html  module.html  style.css
lang/printer/src/render/: mod.rs
