[package]
name = "docs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
opener = "0.5"
askama = "0.12.1"
askama_escape = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# workspace members
ast = { path = "../ast" }
printer = { path = "../printer" }
driver = { path = "../driver" }
